Fixed vertical align in table cells.

--- a/files/style.css
+++ b/files/style.css
@@ -34,6 +34,7 @@ table {
     th, td {
         border: 1px solid #ccc;
         padding: 10px;
+        vertical-align: top;
     }
 
 /* class styles */
